--- a/cap2/implementing-first-example.ipynb
+++ b/cap2/implementing-first-example.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "28025222",
    "metadata": {},
    "outputs": [],
@@ -330,8 +330,17 @@
    "execution_count": null,
    "id": "4b67d9d9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test set accuracy: 0.7670000195503235\n"
+     ]
+    }
+   ],
    "source": [
+    "#predictions = activation(x) = a\n",
     "predictions = model(test_images)\n",
     "predictions = predictions.numpy()\n",
     "predicted_labels = tf.argmax(predictions, axis=1)\n",
