criado classificador linear 2d de tensorflow  puro e profundamento na keras api

--- a/cap3/linear-classifier-example.ipynb
+++ b/cap3/linear-classifier-example.ipynb
@@ -8,7 +8,7 @@
     "## An end-to-end example: A linear classifier in pure TensorFlow\n",
     "covariance matrix = shape of the point cloud of data\n",
     "\n",
-    "We’ll reuse the same covariance matrix for both point clouds, but we’ll use two different mean values—the point clouds will have the same shape, but different positio"
+    "We’ll reuse the same covariance matrix for both point clouds, but we’ll use two different mean values—the point clouds will have the same shape, but different positions"
    ]
   },
   {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "e455e472",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
     "import tensorflow as tf\n",
     "input_dim = 2 #os inputs sao pontos 2d\n",
     "output_dim = 1 #predições serão um score por amostra, perto de 0 se a classe predita for 0, etc\n",
-    "W = tf.Variable(initial_value=tf.random.uniform(shape=(input_dim, output_dim)))\n",
+    "W = tf.Variable(initial_value=tf.random.uniform(shape=(input_dim, output_dim))) #W.shape = (2,1)\n",
     "b = tf.Variable(initial_value=tf.zeros(shape=(output_dim,)))\n"
    ]
   },
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "b8759cb9",
    "metadata": {},
    "outputs": [],
@@ -207,10 +207,9 @@
     "        predictions = model(inputs)\n",
     "        loss = square_loss(targets, predictions)\n",
     "    grad_loss_wrt_W, grad_loss_wrt_b = tape.gradient(loss,[W,b])\n",
-    "    W.assign_sub(grad_loss_wrt_W * learning_rate)\n",
-    "    b.assign_sub(grad_loss_wrt_b * learning_rate)\n",
-    "    return loss\n",
-    "\n"
+    "    W.assign_sub(grad_loss_wrt_W * learning_rate) #otimiza os pesos na direçao contraria ao gradiente da perda com relação ao peso limitado pelo learning rate\n",
+    "    b.assign_sub(grad_loss_wrt_b * learning_rate) #atualiza o bias\n",
+    "    return loss"
    ]
   },
   {
