escolha de loss function; uso de validation_data

--- a/cap3/understanding-core-keras-api.ipynb
+++ b/cap3/understanding-core-keras-api.ipynb
@@ -280,6 +280,178 @@
     "            loss=\"mean_squared_error\",\n",
     "            metrics=[\"accuracy\"])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "119589cc",
+   "metadata": {},
+   "source": [
+    "### 3.6.4 Picking a loss function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48b90f91",
+   "metadata": {},
+   "source": [
+    "For instance, you’ll use binary crossentropy for a two-class classification problem, categorical crossentropy for a many-class classification problem, and so on. Only when you’re working on truly new research problems will you have to develop your own loss functions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b121c790",
+   "metadata": {},
+   "source": [
+    "### 3.6.5 Understanding the fit() method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c9c0770",
+   "metadata": {},
+   "source": [
+    "The fit() method implements the training loop itself. These are its key arguments:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0022f5a7",
+   "metadata": {},
+   "source": [
+    "- The data (inputs and targets) to train on. It will typically be passed either in the form of NumPy arrays or a TensorFlow Dataset object.\n",
+    "\n",
+    "- The number of epochs to train for: how many times the training loop should iterate over the data passed.\n",
+    "\n",
+    "- The batch size to use within each epoch of mini-batch gradient descent: the number of training examples considered to compute the gradients for one weight update step."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "867ee02d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "history = model.fit(\n",
+    "    inputs, #inputs(numpy array)\n",
+    "    targets, #targets de treinamento, numpyarray\n",
+    "    epochs=5, #training loop itera 5 vezes\n",
+    "    batch_size=128 #training loop ira iterar em lotes de 128 exemplos\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abe447a9",
+   "metadata": {},
+   "source": [
+    "The call to fit() returns a History object. This object contains a history field, which is a dict mapping keys such as \"loss\" or specific metric names to the list of their perepoch values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae5974c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "history.history \n",
+    "{\"binary_accuracy\": [0.855, 0.9565, 0.9555, 0.95, 0.951], \n",
+    "\"loss\": [0.6573270302042366,\n",
+    "    0.07434618508815766,\n",
+    "    0.07687718723714351,  \n",
+    "    0.07412414988875389, \n",
+    "    0.07617757616937161]}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e0f9a45",
+   "metadata": {},
+   "source": [
+    "The goal of machine learning is to obtain models that perform well in general, and particularly on data points that the model has never encountered before."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bcdefcc0",
+   "metadata": {},
+   "source": [
+    "### usando o argumento validation_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b26091b",
+   "metadata": {},
+   "source": [
+    "you track how the model is performing on new data by using the validation_data argument in fit(). Like the training data, the validation data could be passed as NumPy arrays or as a TensorFlow Dataset object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6f57c48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = keras.Sequential([keras.layers.Dense(1)])\n",
+    "model.compile(optimizer=keras.optimizers.RMSprop(learning_rate=0.1),\n",
+    "            loss=keras.losses.MeanSquaredError(),\n",
+    "            metrics=[keras.metrics.BinaryAccuracy()])\n",
+    "\n",
+    "#to avoid having samples from only one class in validation data,\n",
+    "#shuffle the inputs and targets using a random indices permutation\n",
+    "\n",
+    "indices_permutation = np.random.permutation(len(inputs))\n",
+    "shuffled_inputs = inputs[indices_permutation]\n",
+    "shuffled_targets = targets[indices_permutation]\n",
+    "\n",
+    "# reserve 30% of the training inputs e targets for validation\n",
+    "#(exclude these samples from training and reserve them to compute\n",
+    "#the validation loss and metrics)\n",
+    "\n",
+    "num_validation_samples = int(0.3 * len(inputs))\n",
+    "val_inputs = shuffled_inputs[:num_validation_samples] #0 ->30%\n",
+    "val_targets = shuffled_targets[:num_validation_samples]\n",
+    "training_inputs = shuffled_inputs[num_validation_samples:]\n",
+    "training_targets = shuffled_targets[num_validation_samples:]\n",
+    "\n",
+    "#validation data será usada para monitorar as metricas e loss\n",
+    "model.fit(\n",
+    "    training_inputs,\n",
+    "    training_targets,\n",
+    "    epochs=5,\n",
+    "    batch_size=16,\n",
+    "    validation_data=(val_inputs, val_targets)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eca8f206",
+   "metadata": {},
+   "source": [
+    "Note that if you want to compute the validation loss and metrics after the training is complete, you can call the evaluate() method:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cae29cf8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss_and_metrics = model.evaluate(val_inputs, val_targets, batch_size=128)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce412d87",
+   "metadata": {},
+   "source": [
+    "evaluate() will iterate in batches (of size batch_size) over the data passed and return a list of scalars, where the first entry is the validation loss and the following entries are the validation metrics. If the model has no metrics, only the validation loss is returned (rather than a list)."
+   ]
   }
  ],
  "metadata": {
