inferencia -> realizar predições com o modelo sobre novos dados

--- a/cap3/understanding-core-keras-api.ipynb
+++ b/cap3/understanding-core-keras-api.ipynb
@@ -452,6 +452,81 @@
    "source": [
     "evaluate() will iterate in batches (of size batch_size) over the data passed and return a list of scalars, where the first entry is the validation loss and the following entries are the validation metrics. If the model has no metrics, only the validation loss is returned (rather than a list)."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a45a5f4c",
+   "metadata": {},
+   "source": [
+    "### 3.6.7 Inference: Using a model after training"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47a3c26c",
+   "metadata": {},
+   "source": [
+    "Once you’ve trained your model, you’re going to want to use it to make predictions on new data. \n",
+    "\n",
+    "This is called inference: To do this, a naive approach would simply be to __call__() the model:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed354636",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = model(new_inputs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3f0f205",
+   "metadata": {},
+   "source": [
+    "esse processo pode ser muito contexto dependendo do tamanho dos dados de input. A better way to do inference is to use the predict() method. It will iterate over the data in small batches and return a NumPy array of predictions. And unlike __call__(), it can also process TensorFlow Dataset objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d746efe3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = model.predict(new_inputs, batch_size=128)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5f8dbac",
+   "metadata": {},
+   "source": [
+    "if we use predict() on some of our validation data with the linear model we trained earlier, we get scalar scores that correspond to the model’s prediction for each input sample:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35729081",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ">>> predictions = model.predict(val_inputs, batch_size=128)\n",
+    ">>> print(predictions[:10]) \n",
+    "[[0.3590725 ] \n",
+    "  [0.82706255]\n",
+    "  [0.74428225]\n",
+    "  [0.682058 ] \n",
+    "  [0.7312616 ] \n",
+    "  [0.6059811 ] \n",
+    "  [0.78046083] \n",
+    "  [0.025846 ] \n",
+    "  [0.16594526] \n",
+    "  [0.72068727]]"
+   ]
   }
  ],
  "metadata": {
