--- a/cap4/further_experiments.ipynb
+++ b/cap4/further_experiments.ipynb
@@ -25,11 +25,468 @@
     "\n",
     "d)Try using the tanh activation (an activation that was popular in the early days of neural networks) instead of relu."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48f505d2",
+   "metadata": {},
+   "source": [
+    "## a) vou fazer com 3 camadas de representação"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "74f28567",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.datasets import imdb\n",
+    "(train_data, train_labels), (test_data, test_labels) = imdb.load_data(num_words=10000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "973215ad",
+   "metadata": {},
+   "source": [
+    "preparar os dados via multihot-encoding."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d01e1eb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "def vectorize_sequences(sequences, dimension=10000):\n",
+    "    results = np.zeros((len(sequences), dimension))\n",
+    "    for i, sequence in enumerate(sequences):\n",
+    "        for j in sequence:\n",
+    "            if j < dimension:\n",
+    "                results[i,j] = 1.\n",
+    "    return results\n",
+    "\n",
+    "x_train = vectorize_sequences(train_data)\n",
+    "x_test = vectorize_sequences(test_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "613016ef",
+   "metadata": {},
+   "source": [
+    "agora vectorizar as labels com o autoencoding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f4d2fa7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_train = np.asarray(train_labels).astype(\"float32\")\n",
+    "y_test = np.asarray(test_labels).astype(\"float32\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "739abf36",
+   "metadata": {},
+   "source": [
+    "building the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68341fb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow import keras\n",
+    "from keras import layers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b5e6a66e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/4\n",
+      "\u001b[1m49/49\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 6ms/step - accuracy: 0.8204 - loss: 0.4581\n",
+      "Epoch 2/4\n",
+      "\u001b[1m49/49\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 5ms/step - accuracy: 0.9015 - loss: 0.2902\n",
+      "Epoch 3/4\n",
+      "\u001b[1m49/49\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - accuracy: 0.9194 - loss: 0.2353\n",
+      "Epoch 4/4\n",
+      "\u001b[1m49/49\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step - accuracy: 0.9291 - loss: 0.2043\n",
+      "\u001b[1m782/782\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 2ms/step - accuracy: 0.8886 - loss: 0.2782\n"
+     ]
+    }
+   ],
+   "source": [
+    "#modelo construido com 3 camadas de representação\n",
+    "model = keras.Sequential([\n",
+    "    layers.Dense(16, activation=\"relu\"),\n",
+    "    layers.Dense(1, activation=\"sigmoid\"),\n",
+    "])\n",
+    "\n",
+    "model.compile(optimizer=\"rmsprop\",\n",
+    "            loss=\"binary_crossentropy\",\n",
+    "            metrics=[\"accuracy\"])\n",
+    "\n",
+    "history = model.fit(x_train, y_train, epochs=4, batch_size=512)\n",
+    "results = model.evaluate(x_test,y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "cb13ed32",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.27823323011398315, 0.8885999917984009]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "bb8ba4d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m782/782\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 1ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.24820134],\n",
+       "       [0.99905443],\n",
+       "       [0.88097155],\n",
+       "       ...,\n",
+       "       [0.13657558],\n",
+       "       [0.12448619],\n",
+       "       [0.6021751 ]], shape=(25000, 1), dtype=float32)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96f4b3cf",
+   "metadata": {},
+   "source": [
+    "conclusão, 1 camada de representação teve melhor rsultado que 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e1ca8ec",
+   "metadata": {},
+   "source": [
+    "b)Try using layers with more units or fewer units: 32 units, 64 units, and so on. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "b90cdaf1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/4\n",
+      "\u001b[1m49/49\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 5ms/step - accuracy: 0.8244 - loss: 0.4527\n",
+      "Epoch 2/4\n",
+      "\u001b[1m49/49\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 5ms/step - accuracy: 0.9020 - loss: 0.2833\n",
+      "Epoch 3/4\n",
+      "\u001b[1m49/49\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 5ms/step - accuracy: 0.9202 - loss: 0.2297\n",
+      "Epoch 4/4\n",
+      "\u001b[1m49/49\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 5ms/step - accuracy: 0.9302 - loss: 0.1998\n",
+      "\u001b[1m782/782\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 2ms/step - accuracy: 0.8860 - loss: 0.2821\n"
+     ]
+    }
+   ],
+   "source": [
+    "#modelo construido com 3 camadas de representação\n",
+    "model = keras.Sequential([\n",
+    "    layers.Dense(16, activation=\"relu\"),\n",
+    "    layers.Dense(1, activation=\"sigmoid\"),\n",
+    "])\n",
+    "\n",
+    "model.compile(optimizer=\"rmsprop\",\n",
+    "            loss=\"binary_crossentropy\",\n",
+    "            metrics=[\"accuracy\"])\n",
+    "\n",
+    "history = model.fit(x_train, y_train, epochs=4, batch_size=512)\n",
+    "results = model.evaluate(x_test,y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "a03547b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.2821428179740906, 0.8859599828720093]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "d6d81f79",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m782/782\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 1ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.21612944],\n",
+       "       [0.9994577 ],\n",
+       "       [0.7716147 ],\n",
+       "       ...,\n",
+       "       [0.094501  ],\n",
+       "       [0.07492308],\n",
+       "       [0.50994766]], shape=(25000, 1), dtype=float32)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8fba6a7",
+   "metadata": {},
+   "source": [
+    "## c)Try using the mse loss function instead of binary_crossentropy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "6e07ebb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/4\n",
+      "\u001b[1m49/49\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 6ms/step - accuracy: 0.8120 - loss: 0.1561\n",
+      "Epoch 2/4\n",
+      "\u001b[1m49/49\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 5ms/step - accuracy: 0.8944 - loss: 0.0941\n",
+      "Epoch 3/4\n",
+      "\u001b[1m49/49\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 5ms/step - accuracy: 0.9107 - loss: 0.0768\n",
+      "Epoch 4/4\n",
+      "\u001b[1m49/49\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step - accuracy: 0.9211 - loss: 0.0673\n",
+      "\u001b[1m782/782\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 2ms/step - accuracy: 0.8892 - loss: 0.0853\n"
+     ]
+    }
+   ],
+   "source": [
+    "#modelo construido com 3 camadas de representação\n",
+    "model = keras.Sequential([\n",
+    "    layers.Dense(16, activation=\"relu\"),\n",
+    "    layers.Dense(1, activation=\"sigmoid\"),\n",
+    "])\n",
+    "\n",
+    "model.compile(optimizer=\"rmsprop\",\n",
+    "            loss=\"mse\",\n",
+    "            metrics=[\"accuracy\"])\n",
+    "\n",
+    "history = model.fit(x_train, y_train, epochs=4, batch_size=512)\n",
+    "results = model.evaluate(x_test,y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "5a375a8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.08529828488826752, 0.889240026473999]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "fcdb0d8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m782/782\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 1ms/step  \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.2829184 ],\n",
+       "       [0.997542  ],\n",
+       "       [0.78685075],\n",
+       "       ...,\n",
+       "       [0.1564425 ],\n",
+       "       [0.14355719],\n",
+       "       [0.4691588 ]], shape=(25000, 1), dtype=float32)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22507db0",
+   "metadata": {},
+   "source": [
+    "### d)Try using the tanh activation (an activation that was popular in the early days of neural networks) instead of relu."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "f8341536",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/4\n",
+      "\u001b[1m49/49\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 5ms/step - accuracy: 0.8160 - loss: 0.1639\n",
+      "Epoch 2/4\n",
+      "\u001b[1m49/49\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 5ms/step - accuracy: 0.8884 - loss: 0.1031\n",
+      "Epoch 3/4\n",
+      "\u001b[1m49/49\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step - accuracy: 0.9049 - loss: 0.0821\n",
+      "Epoch 4/4\n",
+      "\u001b[1m49/49\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step - accuracy: 0.9174 - loss: 0.0708\n",
+      "\u001b[1m782/782\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 2ms/step - accuracy: 0.8785 - loss: 0.0918\n",
+      "[0.09184686839580536, 0.8784800171852112]\n",
+      "\u001b[1m782/782\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.22364613],\n",
+       "       [0.9853229 ],\n",
+       "       [0.68046236],\n",
+       "       ...,\n",
+       "       [0.11660443],\n",
+       "       [0.11622421],\n",
+       "       [0.36863568]], shape=(25000, 1), dtype=float32)"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#modelo construido com 3 camadas de representação\n",
+    "model = keras.Sequential([\n",
+    "    layers.Dense(16, activation=\"tanh\"),\n",
+    "    layers.Dense(1, activation=\"sigmoid\"),\n",
+    "])\n",
+    "\n",
+    "model.compile(optimizer=\"rmsprop\",\n",
+    "            loss=\"mse\",\n",
+    "            metrics=[\"accuracy\"])\n",
+    "\n",
+    "history = model.fit(x_train, y_train, epochs=4, batch_size=512)\n",
+    "results = model.evaluate(x_test,y_test)\n",
+    "\n",
+    "print(results)\n",
+    "\n",
+    "model.predict(x_test)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
