--- a/cap4/classification.ipynb
+++ b/cap4/classification.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "b451c7d2",
    "metadata": {},
    "outputs": [
@@ -70,9 +70,9 @@
     }
    ],
    "source": [
-    ">>> train_data[0] \n",
-    "[1, 14, 22, 16, ... 178, 32] \n",
-    ">>> train_labels[0] \n",
+    ">>> train_data[0]\n",
+    "[1, 14, 22, 16, ... 178, 32]\n",
+    ">>> train_labels[0]\n",
     "1"
    ]
   },
@@ -155,14 +155,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "6162d810",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "def vectorize_sequences(sequences, dimension=10000):\n",
-    "    #create all-zero matrix \n",
+    "    #create all-zero matrix\n",
     "    results = np.zeros((len(sequences), dimension))\n",
     "    for i, sequence in enumerate(sequences):\n",
     "        for j in sequence:\n",
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "5d62d520",
    "metadata": {},
    "outputs": [
@@ -509,15 +509,15 @@
     }
    ],
    "source": [
-    "plt.clf() \n",
-    "acc = history_dict[\"accuracy\"] \n",
-    "val_acc = history_dict[\"val_accuracy\"] \n",
-    "plt.plot(epochs, acc, \"bo\", label=\"Training acc\") \n",
-    "plt.plot(epochs, val_acc, \"b\", label=\"Validation acc\") \n",
-    "plt.title(\"Training and validation accuracy\") \n",
-    "plt.xlabel(\"Epochs\") \n",
-    "plt.ylabel(\"Accuracy\") \n",
-    "plt.legend() \n",
+    "plt.clf()\n",
+    "acc = history_dict[\"accuracy\"]\n",
+    "val_acc = history_dict[\"val_accuracy\"]\n",
+    "plt.plot(epochs, acc, \"bo\", label=\"Training acc\")\n",
+    "plt.plot(epochs, val_acc, \"b\", label=\"Validation acc\")\n",
+    "plt.title(\"Training and validation accuracy\")\n",
+    "plt.xlabel(\"Epochs\")\n",
+    "plt.ylabel(\"Accuracy\")\n",
+    "plt.legend()\n",
     "plt.show()"
    ]
   },
@@ -664,6 +664,22 @@
    ],
    "source": [
     "model.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4195042e",
+   "metadata": {},
+   "source": [
+    "### Wrapping up\n",
+    "\n",
+    "Here’s what you should take away from this example: \n",
+    "- You usually need to do quite a bit of preprocessing on your raw data in order to be able to feed it—as tensors—into a neural network. Sequences of words can be encoded as binary vectors, but there are other encoding options too.\n",
+    "- Stacks of Dense layers with relu activations can solve a wide range of problems (including sentiment classification), and you’ll likely use them frequently.\n",
+    "- In a binary classification problem (two output classes), your model should end with a Dense layer with one unit and a sigmoid activation: the output of your model should be a scalar between 0 and 1, encoding a probability.\n",
+    "- With such a scalar sigmoid output on a binary classification problem, the loss function you should use is binary_crossentropy.\n",
+    "- The rmsprop optimizer is generally a good enough choice, whatever your problem. That’s one less thing for you to worry about.\n",
+    "- As they get better on their training data, neural networks eventually start overfitting and end up obtaining increasingly worse results on data they’ve never seen before. Be sure to always monitor performance on data that is outside of the training set."
    ]
   }
  ],
