Updated execution counts in functional API notebook and added new sections on model subclassing, including a custom model class and training instructions. Adjusted output metrics and fixed minor errors in previous code cells.

--- a/cap7/functional_api.ipynb
+++ b/cap7/functional_api.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "0fbc95af",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "b22d4c27",
    "metadata": {},
    "outputs": [],
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "96cd597f",
    "metadata": {},
    "outputs": [
@@ -188,13 +188,13 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/3\n",
-      "\u001b[1m40/40\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 8ms/step - department_accuracy: 0.2602 - department_loss: 32.0590 - loss: 32.3731 - priority_loss: 0.3141 - priority_mean_absolute_error: 0.4823\n",
+      "\u001b[1m40/40\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 8ms/step - department_accuracy: 0.2633 - department_loss: 63.4675 - loss: 63.7987 - priority_loss: 0.3312 - priority_mean_absolute_error: 0.4994\n",
       "Epoch 2/3\n",
-      "\u001b[1m40/40\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 9ms/step - department_accuracy: 0.2484 - department_loss: 32.2761 - loss: 32.6077 - priority_loss: 0.3316 - priority_mean_absolute_error: 0.5001\n",
+      "\u001b[1m40/40\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - department_accuracy: 0.2602 - department_loss: 64.6681 - loss: 64.9993 - priority_loss: 0.3312 - priority_mean_absolute_error: 0.4994\n",
       "Epoch 3/3\n",
-      "\u001b[1m40/40\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 9ms/step - department_accuracy: 0.2547 - department_loss: 39.4007 - loss: 39.7324 - priority_loss: 0.3316 - priority_mean_absolute_error: 0.5001\n",
-      "\u001b[1m40/40\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - department_accuracy: 0.1391 - department_loss: 27.1702 - loss: 27.5019 - priority_loss: 0.3316 - priority_mean_absolute_error: 0.5001\n",
-      "\u001b[1m40/40\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step\n"
+      "\u001b[1m40/40\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 8ms/step - department_accuracy: 0.2703 - department_loss: 71.5123 - loss: 71.8435 - priority_loss: 0.3312 - priority_mean_absolute_error: 0.4994\n",
+      "\u001b[1m40/40\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step - department_accuracy: 0.1352 - department_loss: 97.2811 - loss: 97.6123 - priority_loss: 0.3312 - priority_mean_absolute_error: 0.4994 \n",
+      "\u001b[1m40/40\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 5ms/step\n"
      ]
     }
    ],
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "91d26d23",
    "metadata": {},
    "outputs": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ea35bcf9",
    "metadata": {},
    "outputs": [
@@ -270,13 +270,13 @@
        "[<InputLayer name=title, built=True>,\n",
        " <InputLayer name=text_body, built=True>,\n",
        " <InputLayer name=tags, built=True>,\n",
-       " <Concatenate name=concatenate, built=True>,\n",
-       " <Dense name=dense_2, built=True>,\n",
+       " <Concatenate name=concatenate_1, built=True>,\n",
+       " <Dense name=dense_3, built=True>,\n",
        " <Dense name=priority, built=True>,\n",
        " <Dense name=department, built=True>]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "ee237545",
    "metadata": {},
    "outputs": [
@@ -299,7 +299,7 @@
        " <KerasTensor shape=(None, 100), dtype=float32, sparse=False, ragged=False, name=tags>]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,17 +310,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "f31c75c9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<KerasTensor shape=(None, 20100), dtype=float32, sparse=False, ragged=False, name=keras_tensor_2>"
+       "<KerasTensor shape=(None, 20100), dtype=float32, sparse=False, ragged=False, name=keras_tensor_6>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,22 +347,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "b7a4492f",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'keras' has no attribute 'model'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[29]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m features = model.layers[\u001b[32m4\u001b[39m].output \u001b[38;5;66;03m#layers[4] is the output of the previous model\u001b[39;00m\n\u001b[32m      2\u001b[39m difficulty = layers.Dense(\u001b[32m3\u001b[39m, activation=\u001b[33m\"\u001b[39m\u001b[33msoftmax\u001b[39m\u001b[33m\"\u001b[39m, name=\u001b[33m\"\u001b[39m\u001b[33mdifficulty\u001b[39m\u001b[33m\"\u001b[39m)(features)\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m new_model=\u001b[43mkeras\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmodel\u001b[49m(\n\u001b[32m      5\u001b[39m \tinputs=[title, text_body, tags],\n\u001b[32m      6\u001b[39m \toutputs=[priority, department, difficulty]\n\u001b[32m      7\u001b[39m )\n",
-      "\u001b[31mAttributeError\u001b[39m: module 'keras' has no attribute 'model'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "features = model.layers[4].output #layers[4] is the output of the previous model\n",
     "difficulty = layers.Dense(3, activation=\"softmax\", name=\"difficulty\")(features)\n",
@@ -371,6 +359,171 @@
     "\tinputs=[title, text_body, tags],\n",
     "\toutputs=[priority, department, difficulty]\n",
     ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bad91912",
+   "metadata": {},
+   "source": [
+    "You can train your model in much the same way as you would train a Sequential model, by calling fit() with lists of input and output data. These lists of data should be in the same order as the inputs you passed to the Model constructor."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "81fb8611",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You must install graphviz (see instructions at https://graphviz.gitlab.io/download/) for `plot_model` to work.\n"
+     ]
+    }
+   ],
+   "source": [
+    "keras.utils.plot_model( new_model, \"updated_ticket_classifier.png\", show_shapes=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff8fb2bb",
+   "metadata": {},
+   "source": [
+    "### Subclassing the Model class"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87936f26",
+   "metadata": {},
+   "source": [
+    "The last model-building pattern you should know about is the most advanced one: Model subclassing. You learned in chapter 3 how to subclass the Layer class to create custom layers. Subclassing Model is pretty similar:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "482405d3",
+   "metadata": {},
+   "source": [
+    "Subclassing Model is pretty similar: \n",
+    "- In the __init__() method, define the layers the model will use.\n",
+    "- In the call() method, define the forward pass of the model, reusing the layers previously created. \n",
+    "- Instantiate your subclass, and call it on data to create its weights."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0662345",
+   "metadata": {},
+   "source": [
+    "REWRITING OUR PREVIOUS EXAMPLE AS A SUBCLASSED MODEL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "931861e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CustomerTicketModel(keras.Model):\n",
+    "    def __init__(self, num_departments):\n",
+    "        super().__init__()\n",
+    "        self.concat_layer = layers.Concatenate()\n",
+    "        self.mixing_layer = layers.Dense(64, activation=\"relu\")\n",
+    "        self.priority_scorer = layers.Dense(1, activation=\"sigmoid\")\n",
+    "        self.department_classifier = layers.Dense(\n",
+    "            num_departments, activation=\"softmax\"\n",
+    "        )\n",
+    "\n",
+    "    #define forward pass in the call method\n",
+    "    def call(self, inputs):\n",
+    "        title = inputs[\"title\"]\n",
+    "        text_body = inputs[\"text_body\"]\n",
+    "        tags = inputs[\"tags\"]\n",
+    "\n",
+    "        features = self.concat_layer([title, text_body, tags])\n",
+    "        features = self.mixing_layer(features)\n",
+    "        priority = self.priority_scorer(features) #output 1\n",
+    "        department = self.department_classifier(features) #output 2\n",
+    "        return priority, department\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eaf3c89b",
+   "metadata": {},
+   "source": [
+    "Once you’ve defined the model, you can instantiate it. Note that it will only create its weights the first time you call it on some data, much like Layer subclasses:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "f001937d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = CustomerTicketModel(num_departments=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "dc2768b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "priority, department = model(\n",
+    "    {\"title\": title_data, \"text_body\": text_body_data, \"tags\": tags_data}\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cfcaa5c4",
+   "metadata": {},
+   "source": [
+    "What, then, is the difference between a Layer subclass and a Model subclass? It’s simple: a “layer” is a building block you use to create models, and a “model” is the top-level object that you will actually train, export for inference, etc. In short, a Model has fit(), evaluate(), and predict() methods. Layers don’t. Other than that, the two classes are virtually identical. (Another difference is that you can save a model to a file on disk)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9cbbee0",
+   "metadata": {},
+   "source": [
+    "You can compile and train a Model subclass just like a Sequential or Functional model:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f830b012",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(optimizer=\"rmsprop\",\n",
+    "    loss=[\"mean_squared_error\", \"categorical_crossentropy\"],\n",
+    "    metrics=[[\"mean_absolute_error\"], [\"accuracy\"]])\n",
+    "\n",
+    "model.fit({\"title\": title_data,\n",
+    "        \"text_body\": text_body_data,\n",
+    "        \"tags\":tags_data},\n",
+    "        [priority_data, department_data],\n",
+    "        epochs=1)\n",
+    "\n",
+    "model.evaluate({\"title\": title_data,\n",
+    "                \"text_body\": text_body_data,\n",
+    "                \"tags\":tags_data},\n",
+    "                [priority_data, department_data])\n",
+    "\n",
+    "priority_preds, department_preds = model.predict(\n",
+    "{\"title\": title_data, \"text_body\": text_body_data, \"tags\": tags_data})\n",
+    "\n"
    ]
   }
  ],
@@ -390,7 +543,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
