--- a/cap5/introduction.ipynb
+++ b/cap5/introduction.ipynb
@@ -159,10 +159,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e48f0b23",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20\n",
+      "\u001b[1m30/30\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6s\u001b[0m 30ms/step - accuracy: 0.6177 - loss: 0.6444 - val_accuracy: 0.7902 - val_loss: 0.5523\n",
+      "Epoch 2/20\n",
+      "\u001b[1m30/30\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 10ms/step - accuracy: 0.7299 - loss: 0.5452 - val_accuracy: 0.8647 - val_loss: 0.4516\n",
+      "Epoch 3/20\n",
+      "\u001b[1m30/30\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 12ms/step - accuracy: 0.7967 - loss: 0.4718 - val_accuracy: 0.8618 - val_loss: 0.3931\n",
+      "Epoch 4/20\n",
+      "\u001b[1m30/30\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 11ms/step - accuracy: 0.8347 - loss: 0.4188 - val_accuracy: 0.8869 - val_loss: 0.3428\n",
+      "Epoch 5/20\n",
+      "\u001b[1m30/30\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 14ms/step - accuracy: 0.8614 - loss: 0.3732 - val_accuracy: 0.8841 - val_loss: 0.3187\n",
+      "Epoch 6/20\n",
+      "\u001b[1m30/30\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 14ms/step - accuracy: 0.8819 - loss: 0.3314 - val_accuracy: 0.8912 - val_loss: 0.2917\n",
+      "Epoch 7/20\n",
+      "\u001b[1m30/30\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 13ms/step - accuracy: 0.9021 - loss: 0.2926 - val_accuracy: 0.8910 - val_loss: 0.2804\n",
+      "Epoch 8/20\n",
+      "\u001b[1m30/30\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 12ms/step - accuracy: 0.9119 - loss: 0.2637 - val_accuracy: 0.8888 - val_loss: 0.2862\n",
+      "Epoch 9/20\n",
+      "\u001b[1m30/30\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 13ms/step - accuracy: 0.9221 - loss: 0.2424 - val_accuracy: 0.8909 - val_loss: 0.2763\n",
+      "Epoch 10/20\n",
+      "\u001b[1m30/30\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 15ms/step - accuracy: 0.9330 - loss: 0.2153 - val_accuracy: 0.8875 - val_loss: 0.2844\n",
+      "Epoch 11/20\n",
+      "\u001b[1m30/30\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 12ms/step - accuracy: 0.9362 - loss: 0.2018 - val_accuracy: 0.8868 - val_loss: 0.3146\n",
+      "Epoch 12/20\n",
+      "\u001b[1m30/30\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 13ms/step - accuracy: 0.9436 - loss: 0.1805 - val_accuracy: 0.8893 - val_loss: 0.3013\n",
+      "Epoch 13/20\n",
+      "\u001b[1m30/30\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 11ms/step - accuracy: 0.9505 - loss: 0.1641 - val_accuracy: 0.8875 - val_loss: 0.3318\n",
+      "Epoch 14/20\n",
+      "\u001b[1m30/30\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 12ms/step - accuracy: 0.9529 - loss: 0.1527 - val_accuracy: 0.8874 - val_loss: 0.3412\n",
+      "Epoch 15/20\n",
+      "\u001b[1m30/30\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 12ms/step - accuracy: 0.9551 - loss: 0.1401 - val_accuracy: 0.8806 - val_loss: 0.3614\n",
+      "Epoch 16/20\n",
+      "\u001b[1m30/30\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 13ms/step - accuracy: 0.9550 - loss: 0.1393 - val_accuracy: 0.8823 - val_loss: 0.4092\n",
+      "Epoch 17/20\n",
+      "\u001b[1m30/30\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 11ms/step - accuracy: 0.9619 - loss: 0.1232 - val_accuracy: 0.8837 - val_loss: 0.4072\n",
+      "Epoch 18/20\n",
+      "\u001b[1m30/30\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 12ms/step - accuracy: 0.9648 - loss: 0.1129 - val_accuracy: 0.8844 - val_loss: 0.4474\n",
+      "Epoch 19/20\n",
+      "\u001b[1m30/30\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 12ms/step - accuracy: 0.9661 - loss: 0.1118 - val_accuracy: 0.8827 - val_loss: 0.4607\n",
+      "Epoch 20/20\n",
+      "\u001b[1m30/30\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 13ms/step - accuracy: 0.9694 - loss: 0.1006 - val_accuracy: 0.8817 - val_loss: 0.5018\n"
+     ]
+    }
+   ],
    "source": [
     "model = keras.Sequential([\n",
     "    layers.Dense(16, activation=\"relu\"),\n",
